# station-web

./: .editorconfig  .env.repo  .gitignore  Dockerfile  Procfile  README.xhtml  _darcs.prefs.boring  dev-cmds.sh  dev.Dockerfile  docker-compose.dev.yml  docker-compose.yml  docker_push  startup-dev.sh  startup.sh  station.cabal
.github/workflows/: build.yaml
SQL/: setup.sql
heroku/: postbuild.sh
main/: Main.hs
public/: home.xhtml
public/CSS/: headFoot.css  home.css
public/resp/: slantd.html
run/: station.hs
run/Station/: Constant.hs  Database.hs  HTTP.hs  Web.hs  XML.hs
run/Station/Constant/: Role.hs
run/Station/Database/: Answer.hs  Course.hs  Lesson.hs  Question.hs  Subject.hs  User.hs  Work.hs
run/Station/Web/: Bin.hs  Learn.hs  Session.hs  SysOp.hs  Tool.hs
sql/: collapse.sql  setup.sql
sql/migration/: 2019-12-31T23:59:59.sql  2020-05-08T10:10:10.sql  20210510T235959.sql  20210605T142912.sql
www/: account.xhtml  account.xsl  content.css  delete_disable.js  font-family.css  global.css  header.css  home.xhtml  home.xsl  menubar.xsl  slide-show.css  slider.js
www/learn/: course.css  course.xsl  home.xsl  lesson.css  lesson.js  lesson.xsl  subject.css  subject.xsl  swap.js
www/public/: global.css  home.css  home.xhtml  login-fail.xhtml  menu.js
www/sysop/: account.css  account.xsl  base.css  course.xsl  delete_disable.js  lesson.xsl  question.xsl  subject.xsl  subjects.xsl
