cabal-version: 1.12

name:           station
version:        1.1.1
description:    Website of Station
category:       Web
author:         LEE Chun Kin
copyright:      2019, LEE Chun Kin
license:        GPL-2
build-type:     Simple

executable station
  default-language: Haskell2010
  main-is: station.hs
  hs-source-dirs: run
  default-extensions: LambdaCase NegativeLiterals OverloadedStrings
  ghc-options: -Wall -Wno-tabs -threaded -rtsopts -with-rtsopts=-N
  other-modules:
    Station.Constant
    Station.Constant.Role
    Station.XML
    Station.Database
    Station.Database.User
    Station.Database.Subject
    Station.Database.Course
    Station.HTTP
    Station.Web
    Station.Web.Session
    Station.Web.Bin
    Station.Web.SysOp
  build-depends:
    base,
    bytestring,
    utf8-string,
    filepath,
    time,
    xml,
    scrypt,
    text,
    http-types,
    wai,
    wai-extra,
    wai-app-static,
    warp,
    postgresql-simple
