cabal-version: 1.12

name:          station
version:       1.1.1
description:   Website of Station
category:      Web
author:        LEE Chun Kin
copyright:     2019, LEE Chun Kin
license:       GPL-3.0-only
build-type:    Simple

executable station
  default-language: Haskell2010
  default-extensions: LambdaCase NegativeLiterals OverloadedStrings
  ghc-options: -Wall -Wno-tabs -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs: bin
  main-is: station.hs
  other-modules:
    Station.Constant
    Station.Constant.Role
    Station.XML
    Station.Database
    Station.Database.User
    Station.Database.User.Information
    Station.Database.User.Add
    Station.Database.User.Set
    Station.Database.Session
    Station.Database.Subject
    Station.Database.Course
    Station.Database.Lesson
    Station.Database.Embed
    Station.Database.Embed.Information
    Station.Database.Question
    Station.Database.Answer
    Station.Database.Work
    Station.HTTP
    Station.Web
    Station.Web.Tool
    Station.Web.Environment
    Station.Web.Login
    Station.Web.SysOp
    Station.Web.Learn
  build-depends:
    base >= 4.10.0 && < 5,
    bytestring,
    base64-bytestring,
    binary,
    utf8-string,
    filepath,
    directory,
    time,
    xml,
    scrypt,
    text,
    url,
    http-types,
    cookie,
    wai,
    wai-extra,
    wai-app-static,
    warp,
    postgresql-simple
